--- a/assets/css/homeStyle.css
+++ b/assets/css/homeStyle.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=homeStyle.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}/*# sourceMappingURL=homeStyle.css.map */
