--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -39,30 +39,59 @@ footer .footer-top .container h1::after {
   width: 16%;
 }
 footer .footer-top .container .contact {
-  border: solid 0.5px rgb(210, 210, 210);
-  padding: 30px;
+  border: solid 0.5px rgb(230, 230, 230);
+  padding: 30px 15px;
   width: 47.5%;
 }
 footer .footer-top .container .contact form .name-email {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 15px;
 }
 footer .footer-top .container .contact form .name-email input {
   width: 47%;
   height: 40px;
-  border: solid 0.5px rgb(210, 210, 210);
+  border: solid 0.5px rgb(230, 230, 230);
   border-radius: 10px;
   padding-left: 20px;
+  outline: none;
 }
-footer .footer-top .container .contact form .name-email input ::-moz-placeholder {
-  color: gray;
+footer .footer-top .container .contact form .name-email input::-moz-placeholder {
+  color: rgb(200, 200, 200);
 }
-footer .footer-top .container .contact form .name-email input ::placeholder {
-  color: gray;
+footer .footer-top .container .contact form .name-email input::placeholder {
+  color: rgb(200, 200, 200);
+}
+footer .footer-top .container .contact form .message {
+  margin-bottom: 10px;
+}
+footer .footer-top .container .contact form .message textarea {
+  font-size: 16px;
+  width: 100%;
+  height: 120px;
+  border: solid 0.5px rgb(230, 230, 230);
+  border-radius: 10px;
+  padding: 10px 10px;
+  outline: none;
+}
+footer .footer-top .container .contact form .message textarea::-moz-placeholder {
+  color: rgb(200, 200, 200);
+}
+footer .footer-top .container .contact form .message textarea::placeholder {
+  color: rgb(200, 200, 200);
+}
+footer .footer-top .container .contact form button {
+  background-color: #eb4d4b;
+  height: 50px;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 30px;
+  font-size: 14px;
+  color: white;
 }
 footer .footer-top .container .subscribe {
-  border: solid 0.5px rgb(210, 210, 210);
-  padding: 30px;
+  border: solid 0.5px rgb(230, 230, 230);
+  padding: 30px 15px;
   width: 47.5%;
 }
 footer .footer-top .container .subscribe .letter-icon {
