--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -36,29 +36,55 @@ footer{
                 }
             }
             .contact{
-                border: solid 0.5px rgb(210, 210, 210);
-                padding: 30px;
+                border: solid 0.5px rgb(230, 230, 230);
+                padding: 30px 15px;
                 width: 47.5%;
                 form{
                     .name-email{
                         display: flex;
                         justify-content: space-between;
+                        margin-bottom: 15px;
                         input{
                             width: 47%;
                             height: 40px;
-                            border: solid 0.5px rgb(210, 210, 210);
+                            border: solid 0.5px rgb(230, 230, 230);
                             border-radius: 10px;
                             padding-left: 20px;
-                            ::placeholder{
-                                color: gray;
+                            outline: none;
+                            &::placeholder{
+                                color: rgb(200, 200, 200);
                             }
                         }
+                    }
+                    .message{
+                        margin-bottom: 10px;
+                        textarea{
+                            font-size: 16px;
+                            width: 100%;
+                            height: 120px;
+                            border: solid 0.5px rgb(230, 230, 230);
+                            border-radius: 10px;
+                            padding: 10px 10px;
+                            outline: none;
+                            &::placeholder{
+                                color: rgb(200, 200, 200);
+                            }
+                        }
+                    }
+                    button{
+                        background-color: #eb4d4b;
+                        height: 50px;
+                        padding: 8px 20px;
+                        border: none;
+                        border-radius: 30px;
+                        font-size: 14px;
+                        color: white;
                     }
                 }
             }
             .subscribe{       
-                border: solid 0.5px rgb(210, 210, 210);
-                padding: 30px;
+                border: solid 0.5px rgb(230, 230, 230);
+                padding: 30px 15px;
                 width: 47.5%;
                 .letter-icon{
                     width: 50px;
