--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -41,7 +41,7 @@ footer .footer-top .container h1::after {
 footer .footer-top .container .contact {
   border: solid 0.5px rgb(230, 230, 230);
   padding: 30px 15px;
-  width: 47.5%;
+  width: 49%;
 }
 footer .footer-top .container .contact form .name-email {
   display: flex;
@@ -50,7 +50,7 @@ footer .footer-top .container .contact form .name-email {
 }
 footer .footer-top .container .contact form .name-email input {
   width: 47%;
-  height: 40px;
+  height: 45px;
   border: solid 0.5px rgb(230, 230, 230);
   border-radius: 10px;
   padding-left: 20px;
@@ -88,17 +88,133 @@ footer .footer-top .container .contact form button {
   border-radius: 30px;
   font-size: 14px;
   color: white;
+  transition: 0.5s;
+}
+footer .footer-top .container .contact form button:hover {
+  color: white;
+  background-color: #232323;
 }
 footer .footer-top .container .subscribe {
   border: solid 0.5px rgb(230, 230, 230);
   padding: 30px 15px;
-  width: 47.5%;
+  width: 49%;
 }
 footer .footer-top .container .subscribe .letter-icon {
   width: 50px;
   height: 50px;
   margin: 0 auto;
+  margin-bottom: 15px;
 }
 footer .footer-top .container .subscribe .letter-icon svg {
   fill: #EB4D50;
+}
+footer .footer-top .container .subscribe h2 {
+  font-size: 22px;
+  font-weight: 600;
+}
+footer .footer-top .container .subscribe p {
+  font-size: 14px;
+  color: rgb(120, 120, 120);
+}
+footer .footer-top .container .subscribe .email {
+  position: relative;
+  padding: 0 40px;
+  margin-bottom: 20px;
+}
+footer .footer-top .container .subscribe .email input {
+  padding-left: 20px;
+  width: 100%;
+  height: 50px;
+  border-radius: 30px;
+  border: solid 0.5px rgb(230, 230, 230);
+  outline: none;
+}
+footer .footer-top .container .subscribe .email input::-moz-placeholder {
+  font-size: 14px;
+}
+footer .footer-top .container .subscribe .email input::placeholder {
+  font-size: 14px;
+}
+footer .footer-top .container .subscribe .email button {
+  position: absolute;
+  top: 2.5px;
+  right: 42.5px;
+  background-color: #eb4d4b;
+  height: 45px;
+  padding: 8px 30px;
+  border: none;
+  border-radius: 30px;
+  font-size: 14px;
+  color: white;
+  transition: 0.5s;
+}
+footer .footer-top .container .subscribe .email button:hover {
+  color: white;
+  background-color: #232323;
+}
+footer .footer-top .container .subscribe .social-net ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+footer .footer-top .container .subscribe .social-net ul li {
+  margin: 0;
+}
+footer .footer-top .container .subscribe .social-net ul li a svg {
+  width: 40px;
+  height: 40px;
+}
+footer .footer-mid {
+  padding: 0 0 50px;
+}
+footer .footer-mid ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  font-size: 14px;
+}
+footer .footer-mid ul li {
+  line-height: 30px;
+  margin-bottom: 0px;
+}
+footer .footer-mid ul li:nth-child(even) {
+  color: gray;
+  font-weight: 100;
+  margin: 0 10px;
+}
+footer .footer-mid ul li a {
+  letter-spacing: 1px;
+  font-weight: 400;
+  text-decoration: none;
+  color: rgb(100, 100, 100);
+  transition: 0.5s;
+}
+footer .footer-mid ul li a:hover {
+  color: #eb4d4b;
+}
+footer .footer-bottom {
+  padding: 10px 0;
+  background-color: #151515;
+}
+footer .footer-bottom span {
+  width: 50%;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+footer .footer-bottom span a {
+  text-decoration: none;
+  color: white;
+}
+footer .footer-bottom .pay-cards {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 50%;
+}
+footer .footer-bottom .pay-cards img {
+  margin-left: 10px;
 }/*# sourceMappingURL=footer.css.map */
