--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -38,7 +38,7 @@ footer{
             .contact{
                 border: solid 0.5px rgb(230, 230, 230);
                 padding: 30px 15px;
-                width: 47.5%;
+                width: 49%;
                 form{
                     .name-email{
                         display: flex;
@@ -46,7 +46,7 @@ footer{
                         margin-bottom: 15px;
                         input{
                             width: 47%;
-                            height: 40px;
+                            height: 45px;
                             border: solid 0.5px rgb(230, 230, 230);
                             border-radius: 10px;
                             padding-left: 20px;
@@ -79,21 +79,138 @@ footer{
                         border-radius: 30px;
                         font-size: 14px;
                         color: white;
+                        transition: 0.5s;
+                        &:hover{
+                            color: white;
+                            background-color:#232323;
+                        }
                     }
                 }
             }
             .subscribe{       
                 border: solid 0.5px rgb(230, 230, 230);
                 padding: 30px 15px;
-                width: 47.5%;
+                width: 49%;
                 .letter-icon{
                     width: 50px;
                     height: 50px;
                     margin: 0 auto;
+                    margin-bottom: 15px;
                     svg{
                         fill: #EB4D50;
                     }
                 }
+                h2{
+                    font-size: 22px;
+                    font-weight: 600;
+                }
+                p{
+                    font-size: 14px;
+                    color: rgb(120, 120, 120);
+                }
+                .email{
+                    position: relative;
+                    padding: 0 40px;
+                    margin-bottom: 20px;
+                    input{
+                        padding-left: 20px;
+                        width: 100%;
+                        height: 50px;
+                        border-radius: 30px;
+                        border: solid 0.5px rgb(230, 230, 230);
+                        outline: none;
+                        &::placeholder{
+                            font-size: 14px;
+                        }
+                    }
+                    button{
+                        position: absolute;
+                        top: 2.5px;
+                        right: 42.5px;
+                        background-color: #eb4d4b;
+                        height: 45px;
+                        padding: 8px 30px;
+                        border: none;
+                        border-radius: 30px;
+                        font-size: 14px;
+                        color: white;
+                        transition: 0.5s;
+                        &:hover{
+                            color: white;
+                            background-color: #232323;
+                        }
+                    }
+                }
+                .social-net{
+                    ul{
+                        list-style: none;
+                        margin: 0;
+                        padding: 0;
+                        li{
+                            margin: 0;
+                            a{
+                               svg{
+                                width: 40px;
+                                height: 40px;
+                               }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .footer-mid{
+        padding: 0 0 50px;
+        ul{
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            list-style: none;
+            font-size: 14px;
+            li{
+                line-height: 30px;
+                margin-bottom: 0px;
+                &:nth-child(even){
+                    color: gray;
+                    font-weight: 100;
+                    margin: 0 10px;
+                }
+                a{
+                    letter-spacing: 1px;
+                    font-weight: 400;
+                    text-decoration: none;
+                    color: rgb(100, 100, 100);
+                    transition: 0.5s;
+                    &:hover{
+                        color: #eb4d4b;
+                    }
+                }
+            }
+        }
+    }
+    .footer-bottom{
+        padding: 10px 0;
+        background-color:#151515;
+        span{
+            width: 50%;
+            color: white;
+            font-size: 14px;
+            font-weight: 400;
+            letter-spacing: 1px;
+            a{
+                text-decoration: none;
+                color: white;
+            }
+        }
+        .pay-cards{
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            width: 50%;
+            img{
+                margin-left: 10px;
             }
         }
     }
