--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -14,6 +14,8 @@ header{
     justify-content: center;
     padding: 30px 0;
     .container{
+        display: flex;
+        align-items: center;
         padding: 0 15px;
         margin: 0 30px;
         .logo{
@@ -133,9 +135,12 @@ header{
                     padding: 10px 20px;
                     background-color: white;
                     border: solid 0.5px rgb(200, 200, 200);
-                    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.40);
+                    box-shadow: 0px 7px 15px rgba(128, 128, 128, 0.40);
+                    span{
+                        font-size: 14px;
+                    }
                     ul{
-                        padding: 0px;
+                        padding: 0 10px 10px;
                         margin: 0px;
                         width: 100%;
                         height: max-content;
@@ -153,6 +158,7 @@ header{
                         }
                     }
                     .languages{
+                        padding:10px 0;
                         width: 100%;
                         height: max-content;
                         border-bottom: solid 1px rgb(230, 230, 230);
@@ -168,7 +174,30 @@ header{
                                         object-fit: contain;
                                         margin-right: 10px;
                                     }
+                                    span{
+                                        font-size: 12px;
+                                    }
                                 }
+                            }
+                        }
+                    }
+                    .currency{
+                        padding:10px 0 0;
+                        width: 100%;
+                        height: max-content;
+                        ul{
+                            justify-content: space-between;
+                            list-style: none;
+                            padding: 0;
+                            margin: 0;
+                            border: none;
+                            li{
+                                padding: 0 10px;
+                                a{
+                                    font-size: 12px;
+                                    text-decoration: none;
+                                }
+                                
                             }
                         }
                     }
@@ -335,9 +364,12 @@ header{
                     padding: 10px 20px;
                     background-color: white;
                     border: solid 0.5px rgb(200, 200, 200);
-                    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.40);
+                    box-shadow: 0px 7px 15px rgba(128, 128, 128, 0.40);
+                    span{
+                        font-size: 14px;
+                    }
                     ul{
-                        padding: 0px;
+                        padding: 0 10px 10px;
                         margin: 0px;
                         width: 100%;
                         height: max-content;
@@ -355,6 +387,7 @@ header{
                         }
                     }
                     .languages{
+                        padding:10px 0;
                         width: 100%;
                         height: max-content;
                         border-bottom: solid 1px rgb(230, 230, 230);
@@ -370,7 +403,30 @@ header{
                                         object-fit: contain;
                                         margin-right: 10px;
                                     }
+                                    span{
+                                        font-size: 12px;
+                                    }
                                 }
+                            }
+                        }
+                    }
+                    .currency{
+                        padding:10px 0 0;
+                        width: 100%;
+                        height: max-content;
+                        ul{
+                            justify-content: space-between;
+                            list-style: none;
+                            padding: 0;
+                            margin: 0;
+                            border: none;
+                            li{
+                                padding: 0 10px;
+                                a{
+                                    font-size: 12px;
+                                    text-decoration: none;
+                                }
+                                
                             }
                         }
                     }
