--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -65,11 +65,16 @@ header .container .nav-bar nav ul li .drop-down {
   padding: 15px;
   border: solid 0.5px rgb(200, 200, 200);
   background-color: white;
+  box-shadow: 0px 5px 15px rgba(128, 128, 128, 0.3);
 }
 header .container .nav-bar nav ul li .drop-down .drop-title {
   text-align: left;
   position: relative;
   padding: 0px;
+}
+header .container .nav-bar nav ul li .drop-down .drop-title span {
+  font-size: 15px;
+  font-weight: 500;
 }
 header .container .nav-bar nav ul li .drop-down .drop-title span::after {
   border-top: 1px solid #ddd;
