--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -62,10 +62,15 @@ header{
                             padding: 15px;
                             border: solid 0.5px rgb(200, 200, 200);
                             background-color: white;
+                            box-shadow: 0px 5px 15px rgba(128, 128, 128, 0.30);
                             .drop-title{
                                 text-align: left;
                                 position: relative;
                                 padding: 0px;
+                                span{
+                                    font-size: 15px;
+                                    font-weight: 500;
+                                }
                                 span::after{
                                     border-top: 1px solid #ddd;
                                     bottom: -10px;
