--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -199,6 +199,7 @@ footer{
             font-size: 14px;
             font-weight: 400;
             letter-spacing: 0.5px;
+            padding: 0;
             a{
                 text-decoration: none;
                 color: white;
@@ -212,6 +213,25 @@ footer{
             img{
                 margin-left: 10px;
             }
+        }
+    }
+    .go-top{
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #eb4d4b;
+        text-decoration: none;
+        color: white;
+        transition: 0.5s;
+        &:hover{
+            background-color: #232323;
         }
     }
 }
