--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -5,6 +5,17 @@
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
+.on-cart{
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 2;
+}
 header{
     position: absolute;
     top: 0;
@@ -14,7 +25,9 @@ header{
     justify-content: center;
     padding: 30px 0;
     .container{
+        max-width: 1200px;
         display: flex;
+        justify-content: center;
         align-items: center;
         padding: 0 15px;
         margin: 0 30px;
@@ -223,12 +236,99 @@ header{
                     right: 2px;
                 }
                 .cart-drop{
+                    animation-duration: 0.5s;
                     position: fixed;
                     top: 0;
                     right: 0;
                     bottom: 0;
+                    height: auto;
                     width: 400px;
                     background-color: white;
+                    border: 1px solid #e9e9e9;
+                    padding: 0 10px;
+                    z-index: 3;
+                    transition: 0.5s;
+                    .cart-top{
+                        padding: 30px 0;
+                        width: 100%;
+                        justify-content: space-between;
+                        align-items: center;
+                        border-bottom: 1px solid #eee;
+                        span{
+                            font-size: 14px;
+                        }
+                        svg{
+                            width: 20px;
+                            height: 20px;
+                            fill: gray;
+                        }
+                    }
+                    .cart-list{
+                        width: 100%;
+                        height: 100%;
+                        .product-list{
+                            overflow-y: scroll;
+                            overflow-x: hidden;
+                            list-style: none;
+                            padding: 0;
+                            margin: 0;
+                            li{
+                                margin: 0;
+                                p{
+                                    margin: 50% auto;
+                                    text-align: center;
+                                    color: #adadad;
+                                }
+                            }
+                        }
+                    }
+                    .cart-bottom{
+                        position: sticky;
+                        bottom: 0px;
+                        width: 100%;
+                        height: 30%;
+                        border-top: 1px solid #eee;
+                        background-color: white;
+                        ul{
+                            line-height: 30px;
+                            font-size: 15px;
+                            padding: 0;
+                            margin: 0;
+                            li{
+                                margin: 0;
+                                display: flex;
+                                justify-content: space-between;
+                                span:nth-child(even){
+                                    font-weight: 500;
+                                }
+                            }
+                        }
+                        .buttons{
+                            width: 100%;
+                            padding: 10px 0;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            button{
+                                font-size: 14px;
+                                height: 40px;
+                                width: 49%;
+                                border: none;
+                                background-color:#EB4D50;
+                                color: white;
+                                transition: 0.5s;
+                                &:hover{
+                                    background-color: #232323;
+                                }
+                                &:nth-child(2){
+                                    background-color: #232323;
+                                }
+                                &:nth-child(2):hover {
+                                    background-color:#EB4D50;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -244,10 +344,14 @@ header{
     background-color: white;
     height: 70px;
     justify-content: center;
+    align-items: center;
     padding: 10px 0;
     display: none;
     box-shadow: 0px 0px 7px rgba(128, 128, 128, 0.50);
+    transition: 0.5s;
     .container{
+        justify-content: center;
+        max-width: 1200px;
         padding: 0 15px;
         margin: 0 30px;
         .logo{
